{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 31,
  "lineage": "b6ac83c8-9464-4b66-15df-e7c4aa824d12",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398030083:subnet/subnet-076e4dc08f796c8e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076e4dc08f796c8e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767398030083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0f9b8ab7664002e95"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnets2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398030083:subnet/subnet-0a29d97b8b172bc8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a29d97b8b172bc8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767398030083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0f9b8ab7664002e95"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnets3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398030083:subnet/subnet-0a01d801b2783f7e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a01d801b2783f7e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767398030083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0f9b8ab7664002e95"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398030083:vpc/vpc-0f9b8ab7664002e95",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-06935522bd8383c90",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0310668fd4e502477",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f9b8ab7664002e95",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ca2997bb82bf5369",
            "owner_id": "767398030083"
          }
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "porkersaint_elb-dev",
      "provider": "module.ALB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767398030083:loadbalancer/app/tf-lb-20241127172648236300000001/b5cc786c3c61942f",
            "arn_suffix": "app/tf-lb-20241127172648236300000001/b5cc786c3c61942f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20241127172648236300000001-467498372.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:767398030083:loadbalancer/app/tf-lb-20241127172648236300000001/b5cc786c3c61942f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20241127172648236300000001",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-049b955b63019c9b5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-076e4dc08f796c8e3"
              },
              {
                "subnet_id": "subnet-0a01d801b2783f7e1"
              },
              {
                "subnet_id": "subnet-0a29d97b8b172bc8f"
              }
            ],
            "subnets": [
              "subnet-076e4dc08f796c8e3",
              "subnet-0a01d801b2783f7e1",
              "subnet-0a29d97b8b172bc8f"
            ],
            "tags": {
              "Name": "var.elb_name"
            },
            "tags_all": {
              "Name": "var.elb_name"
            },
            "vpc_id": "vpc-0f9b8ab7664002e95",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_subnet.subnets",
            "data.aws_subnet.subnets2",
            "data.aws_subnet.subnets3",
            "data.aws_vpc.default",
            "module.ELB-SG.aws_security_group.elb-sg"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "porkersaint_elb-dev-443",
      "provider": "module.ALB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767398030083:listener/app/tf-lb-20241127172648236300000001/b5cc786c3c61942f/b93fc9a5b7b5bcfb",
            "certificate_arn": "arn:aws:acm:us-east-1:767398030083:certificate/96252f13-7aae-4c0d-aa2c-4e937cbcd3fb",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767398030083:targetgroup/webserver/e905ce2d7a9876d0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767398030083:listener/app/tf-lb-20241127172648236300000001/b5cc786c3c61942f/b93fc9a5b7b5bcfb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:767398030083:loadbalancer/app/tf-lb-20241127172648236300000001/b5cc786c3c61942f",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.subnets",
            "data.aws_subnet.subnets2",
            "data.aws_subnet.subnets3",
            "data.aws_vpc.default",
            "module.ALB.aws_lb.porkersaint_elb-dev",
            "module.Certificate.aws_acm_certificate.pokersain-dev",
            "module.ELB-SG.aws_security_group.elb-sg",
            "module.TARGET-GROUP.aws_lb_target_group.pokersaint-dev"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "porkersaint_elb-dev-80",
      "provider": "module.ALB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767398030083:listener/app/tf-lb-20241127172648236300000001/b5cc786c3c61942f/11385e8ce8a523d8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767398030083:listener/app/tf-lb-20241127172648236300000001/b5cc786c3c61942f/11385e8ce8a523d8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:767398030083:loadbalancer/app/tf-lb-20241127172648236300000001/b5cc786c3c61942f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.subnets",
            "data.aws_subnet.subnets2",
            "data.aws_subnet.subnets3",
            "data.aws_vpc.default",
            "module.ALB.aws_lb.porkersaint_elb-dev",
            "module.ELB-SG.aws_security_group.elb-sg"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "porkersaint_elb-dev",
      "provider": "module.ALB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:767398030083:targetgroup/webserver/e905ce2d7a9876d0-20241127172651821000000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767398030083:targetgroup/webserver/e905ce2d7a9876d0",
            "target_id": "i-060ab98b4feaaf191"
          },
          "dependencies": [
            "data.aws_subnet.subnets",
            "data.aws_subnet.subnets2",
            "data.aws_subnet.subnets3",
            "data.aws_vpc.default",
            "module.EC2-SG.aws_security_group.ec2-sg",
            "module.EC2.aws_instance.ubuntu22",
            "module.TARGET-GROUP.aws_lb_target_group.pokersaint-dev"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu22",
      "provider": "module.EC2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:767398030083:instance/i-060ab98b4feaaf191",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-060ab98b4feaaf191",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-087703cc28289f379",
            "private_dns": "ip-172-31-94-238.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.94.238",
            "public_dns": "ec2-34-204-6-212.compute-1.amazonaws.com",
            "public_ip": "34.204.6.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 150,
                "volume_id": "vol-0137fcad9a2009b4f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "elb-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-076e4dc08f796c8e3",
            "tags": {
              "Name": "var.instance_name"
            },
            "tags_all": {
              "Name": "var.instance_name"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-065c9348b5bcf2913"
            ]
          },
          "dependencies": [
            "data.aws_subnet.subnets",
            "data.aws_subnet.subnets2",
            "data.aws_subnet.subnets3",
            "data.aws_vpc.default",
            "module.EC2-SG.aws_security_group.ec2-sg"
          ]
        }
      ]
    },
    {
      "module": "module.EC2-SG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "module.EC2-SG.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398030083:security-group/sg-065c9348b5bcf2913",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065c9348b5bcf2913",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "elb-sg",
            "name_prefix": "",
            "owner_id": "767398030083",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Pokersaint-Instance-dev-SG"
            },
            "tags_all": {
              "Name": "Pokersaint-Instance-dev-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9b8ab7664002e95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ELB-SG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "module.ELB-SG.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398030083:security-group/sg-049b955b63019c9b5",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049b955b63019c9b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Pokersaint-elb-dev-SG",
            "name_prefix": "",
            "owner_id": "767398030083",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "var.project-name"
            },
            "tags_all": {
              "Name": "var.project-name"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9b8ab7664002e95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.TARGET-GROUP",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "pokersaint-dev",
      "provider": "module.TARGET-GROUP.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767398030083:targetgroup/webserver/e905ce2d7a9876d0",
            "arn_suffix": "targetgroup/webserver/e905ce2d7a9876d0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767398030083:targetgroup/webserver/e905ce2d7a9876d0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:767398030083:loadbalancer/app/tf-lb-20241127172648236300000001/b5cc786c3c61942f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webserver",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Pokersaint-elb-dev-TG"
            },
            "tags_all": {
              "Name": "Pokersaint-elb-dev-TG"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f9b8ab7664002e95"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}